--- a/swag/Base.lproj/Main.storyboard
+++ b/swag/Base.lproj/Main.storyboard
@@ -81,17 +81,17 @@
                     <navigationItem key="navigationItem" title="Swag" id="fM2-sL-5CZ"/>
                     <connections>
                         <outlet property="cateogryTable" destination="S4n-yU-K3E" id="5uJ-je-iTe"/>
-                        <segue destination="95h-EC-57R" kind="show" id="yuG-g9-hgD"/>
+                        <segue destination="95h-EC-57R" kind="show" identifier="ProductsVC" id="yuG-g9-hgD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="484" y="14.842578710644679"/>
         </scene>
-        <!--View Controller-->
+        <!--ProductsVC-->
         <scene sceneID="5wM-Ju-a3V">
             <objects>
-                <viewController id="95h-EC-57R" sceneMemberID="viewController">
+                <viewController id="95h-EC-57R" customClass="ProductsVC" customModule="swag" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EHB-ug-OXr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -116,7 +116,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="pEX-9g-qmo" customClass="ProductCell" customModule="swag" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductsCell" id="pEX-9g-qmo" customClass="ProductCell" customModule="swag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="170" height="281"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -173,6 +173,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6ML-9Q-3c9"/>
                     </view>
+                    <connections>
+                        <outlet property="productsCollection" destination="uNy-G2-iEH" id="YLQ-AW-jzN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yWm-Ox-tYk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
